fixing alignment issue, removed some td seoerators

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,8 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   padding: 0rem 3rem;
   overflow-y: hidden;
   background-color: #F5F5F5;
+
+  @media only screen and (max-width: 600px) {
+    display: block;
+    padding: 0rem 1rem;
+  }
 }
